# sec-lsm-manager

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE.txt  MAINTAINERS  README.md  fuzz.sh  getmat.sh  index-order  ls-dangling-assets.sh  merge-html.sh  metapkg.txt  mksite.sh  restart.service  tmp
QA/: SEC-LSM-MGR.ADM.md  SEC-LSM-MGR.DEV.md  SEC-LSM-MGR.HRQ.md  SEC-LSM-MGR.HTC.md  SEC-LSM-MGR.HTP.md  SEC-LSM-MGR.IDX.md  SEC-LSM-MGR.LTC.md  SEC-LSM-MGR.OVE.md  SEC-LSM-MGR.PRO.md  SEC-LSM-MGR.RKA.md  SEC-LSM-MGR.RVH.md  SEC-LSM-MGR.SDS.md  SEC-LSM-MGR.TRS.md
afl/: .gitignore  fuzzer_stats-1  fuzzer_stats-2.asan  fuzzer_stats-2.std  fuzzer_stats-2.ubsan
coverage/: index.action.c.1446273711ca0288da5f471f9807bd11.html  index.client.c.10dded823344ae290d830b42cab1a05b.html  index.context.c.fb19ab1402d47e71d97aa82f66f2c3d0.html  index.cynagora-interface.c.b865c54727f20d4d4972cb163dd3da27.html  index.cynagora.c.0eca5f8a8df754d4f8c6cddf4b826b43.html  index.file-utils.c.36db54fe8761bbf9f36549dc0f6aba56.html  index.functions.html  index.html  index.log.c.f8cdfce5cea83a80a9847ba558991869.html  index.main-sec-lsm-manager-cmd.c.dde3bb600dd37b5a34e6a949f7319c46.html  index.main-sec-lsm-managerd-launch.c.dbf4f8308714214d2d3c39dea0b6fcb2.html  index.main-sec-lsm-managerd.c.21fb20df485af6ced909c4732a867f60.html  index.mustach.c.968375505fefcf104b1db8227e885809.html  index.path-utils.c.ba76267c68ddd26eec20e593104c51ad.html  index.paths.c.c8e98250b258722810fe6cfc3de81ea0.html  index.permissions.c.33e436104aa2399fea68451df6b77ca2.html  index.plugs.c.1271c0797d7a8ecc4e9631ab0c0deb18.html  index.pollitem.c.987822e67dfd20f18a70be5ffae0227f.html  index.prot.c.9fc416d73d95fb259c17ba1f78bf234f.html  index.sec-lsm-manager-protocol.c.962fed92127e6341b544628264f5e3ca.html  index.sec-lsm-manager-server.c.764273b8157ff8b9004dc6ad586d5f29.html  index.sec-lsm-manager.c.1da86538b26efa5c2dd206711b92f34d.html  index.setup-tests.c.ec62da8a671368dcdaa1798b7087b6ed.html  index.slmc-test.c.acc90d60d6f0881e1b8b94f6894423ca.html  index.smack-template.c.44d5ee6a427d4cab7d36cca706d224c5.html  index.smack.c.07b51508bb0230e4f398db2522f6d1bc.html  index.smack.c.803345ca085011beed419a579c7c7734.html  index.socket.c.0c9ad93ff051a2fb0a100d470c4d0178.html  index.template.c.6f2d125a089a158c57ea2bfa72e2963e.html  index.test-context.c.8ddb8e382c7e5daf020bb2b512167f5c.html  index.test-cynagora.c.3be90e15ad38e56d994efc6c8af17a16.html  index.test-paths.c.75650e029fc746fb4b1ccd9ce40df2ad.html  index.test-permissions.c.10f28917beb3df7c597aba1f0c5d128e.html  index.test-plugs.c.2804b77edde9ed0e4aa7d6bc631e5d3e.html  index.test-prot.c.5c8286d4c7f9a201af93e458c751bd90.html  index.test-smack-label.c.cb849c0159a5097aab860ed9766c2eba.html  index.test-smack.c.05c98313214cc239ec5e46ea03ddfff9.html  index.test-utils.c.1d25cbbbc2281881e12c2e0188bbe75b.html  index.utf8-utils.c.03d461c7aa8d8ba980993043806d3d10.html  index.xattr-smack.h.188583545794176d3c2a14cfabae5039.html  (+1 more)
docs/: Architecture.md  Compilation.md  Objectives.md  Permissions.md  Protocol.md  SELinux.md  SMACK.md  Templating.md  Usage.md  api-services-book.yml  protocol.md
pkgconfig/: CMakeLists.txt  sec-lsm-manager.pc.in  security-manager.pc.in
script/: CMakeLists.txt  build-module.sh  build-module.sh.in
src/: CMakeLists.txt  action.c  action.h  analyze.sh  context.c  context.h  cynagora-interface.c  cynagora-interface.h  export-sec-lsm-manager-core.map  export-sec-lsm-manager.map  export-security-manager.map  file-utils.c  file-utils.h  limits.h  log.c  log.h  main-sec-lsm-manager-cmd.c  main-sec-lsm-managerd-launch.c  main-sec-lsm-managerd-setup.c  main-sec-lsm-managerd.c  main-security-manager-cmd.c  main-security-managerd.c  offline.c  offline.h  path-utils.c  path-utils.h  paths.c  paths.h  permissions.c  permissions.h  plugs.c  plugs.h  policies.c  policies.h  pollitem.c  pollitem.h  prot.c  prot.h  sec-lsm-manager-client.c  sec-lsm-manager-protocol.c  (+42 more)
src/action/: action.c  action.h  cynagora-interface.c  cynagora-interface.h  mac-interface.h
src/context/: context.c  context.h  paths.c  paths.h  perm-mgr.h  permissions.c  permissions.h  plugs.c  plugs.h
src/lsm-selinux/: selinux-compile.c  selinux-compile.h  selinux-template.c  selinux-template.h  selinux.c  selinux.h  xattr-selinux.h
src/lsm-smack/: smack-template.c  smack-template.h  smack.c  smack.h  xattr-smack.h
src/perm-cynagora/: cynagora-interface.c  cynagora-interface.h  perm-cynagora.h
src/permission/: cynagora-interface.c  cynagora-interface.h
src/protocol/: client.c  client.h  pollitem.c  pollitem.h  prot.c  prot.h  sec-lsm-manager-client.c  sec-lsm-manager-client.h  sec-lsm-manager-protocol.c  sec-lsm-manager-protocol.h  sec-lsm-manager-server.c  sec-lsm-manager-server.h  sec-lsm-manager.c  sec-lsm-manager.h  socket-info.c  socket-info.h  socket.c  socket.h
src/simulation/cynagora/: cynagora.c  cynagora.h
src/simulation/selinux/: selinux.c  selinux.h
src/simulation/smack/: smack.c  smack.h
src/simulation/sys/: smack.h
src/templating/: README.md  mustach.c  template.c  template.h
src/tests/: CMakeLists.txt  old_test_smack.c  run-redtest  setup-tests.c  setup-tests.h  slmc-test.c  test-context.c  test-cynagora.c  test-paths.c  test-permissions.c  test-plugs.c  test-prot.c  test-secure-app.c  test-selinux-template.c  test-selinux.c  test-smack-label.c  test-smack.c  test-utils.c  test_paths.c  test_paths.h  test_permissions.c  test_permissions.h  test_policies.c  test_policies.h  test_secure_app.c  test_secure_app.h  test_smack.c  test_smack.h  test_utils.c  test_utils.h  tests.c  tests.h
systemd/: CMakeLists.txt  sec-lsm-manager.service.in  sec-lsm-manager.socket.in  sec-lsm-manager.target  security-manager.service.in  security-manager.socket.in  security-manager.target
systemd/sockets.target.wants/: sec-lsm-manager.socket  security-manager.socket
template/: CMakeLists.txt  app-template.if  app-template.smack  app-template.te  macros.in
template/selinux/: app-template.if.in  app-template.te.in
template/smack/: app-template.smack.in
trash/: SEC-LSM-MGR.DBV.md  SEC-LSM-MGR.LRQ.md  (+1 more)
(+64 files in other folders)
